--- a/it4women/exercises/hero-blocks-two.html
+++ b/it4women/exercises/hero-blocks-two.html
@@ -80,12 +80,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<p>You can view a finished version of the sample web page you will update in this Tutorial by clicking the link below. The finished sample will open in a new tab of your web browser.</p>
 
-	<div class="four-samples">
-		<div>
-			<a href="final-hero/hero-images/after/hero-images.html" target="_blank"><img src="assets/img/hero-blocks/example-two-browser.jpg" alt="Sample image"></a>
-			<a href="final-hero/hero-images/after/hero-images.html" class="link-exercise"  target="_blank">hero-images.html</a>
-		</div>
-	</div>
+	<a href="final-hero/hero-images/after/hero-images.html" target="_blank"><img src="assets/img/hero-blocks/final-images.png" alt="Sample image" style="max-width:600px"></a>
+
+	<a href="final-hero/hero-images/after/hero-images.html" class="link-exercise"  target="_blank">hero-images.html</a>
+
 
 </section>
 
