--- a/it4women/exercises/hero-blocks-one.html
+++ b/it4women/exercises/hero-blocks-one.html
@@ -78,7 +78,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li>Add Font Awesome icons to a web.</li>
 	</ul>
 
-	<p>You can view a finished version of the sample web page you will work with in this Tutorial by clicking the link below. The finished sample will open in a new tab of your web browser.</p>
+	<p>You can view a finished version of the sample web page you will be working with in this Tutorial by clicking the image or text link below. The finished sample will open in a new tab of your web browser.</p>
 
 	<a href="final-hero/hero-basic/after/hero-basic.html" target="_blank"><img src="assets/img/hero-blocks/final-basic.png" alt="Sample image" style="max-width:600px"></a>
 
