--- a/it4women/exercises/hero-blocks-three.html
+++ b/it4women/exercises/hero-blocks-three.html
@@ -51,12 +51,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li>Add a background video with a pre-loading still image to the hero block in a web page.</li>
 	</ul>
 
-	<div class="four-samples">
-		<div>
-			<a href="final-hero/hero-video/after/hero-video.html" target="_blank"><img src="assets/img/hero-blocks/example-three-browser.jpg" alt="Sample image"></a>
-			<a href="final-hero/hero-video/after/hero-video.html" class="link-exercise"  target="_blank">hero-video.html</a>
-		</div>
-	</div>
+	<p>You can view a finished version of the sample web page you will be working with in this Tutorial by clicking the image or text link below. The finished sample will open in a new tab of your web browser.</p>
+
+	<a href="final-hero/hero-video/after/hero-video.html" target="_blank"><img src="assets/img/hero-blocks/final-videos.png" alt="Sample image" style="max-width:600px"></a>
+
+	<a href="final-hero/hero-video/after/hero-video.html" class="link-exercise"  target="_blank">hero-video.html</a>
 
 
 </section>
