--- a/it4women/index.html
+++ b/it4women/index.html
@@ -288,7 +288,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="bg-section-light" style="padding-bottom: 20px; margin-bottom:20px">
 <section class="container-wide">
 
-	<h2>Working with Bootstrap</h2>
+	<h2>Beginning Bootstrap</h2>
 
 	<div class="flex-grid">
 
@@ -370,7 +370,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="bg-section-light" style="padding-bottom: 20px; margin-bottom:20px">
 <section class="container-wide">
 
-	<h2>More Bootstrap</h2>
+	<h2>Bootstrap Advanced</h2>
 
 	<div class="flex-grid">
 
@@ -539,7 +539,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<h2>Building your Personal Portfolio Website</h2>
 	<p>In this project you will create your Bootstrap-powered, six-page personal website.</p>
 
-	<p><a href="projects/project-home/index99.html"><b>Your Personal Portfolio Website</a></b></p>
+	<p><a href="projects/project-home/index-1.html"><b>Your Personal Portfolio Website</a></b></p>
 
 </section>
 
