--- a/it4women/projects/project-home/index-1.html
+++ b/it4women/projects/project-home/index-1.html
@@ -277,7 +277,7 @@
 	
 	<p><a href="assets/img/global.css" target="_blank">global.css</a></p>
 
-	<p>This stylesheet file controls the appearance of all the pages on your persoal website (except individual project web pages).</p>
+	<p>This stylesheet file controls the appearance of all the pages on your personal website (except individual project web pages).</p>
 
 </section>
 
