--- a/it4women/exercises/hero-blocks-one.html
+++ b/it4women/exercises/hero-blocks-one.html
@@ -143,7 +143,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<ul>
 		<li><b><a href="final-hero/hero-basic/before/hero-basic.html" target="_blank">hero-basic.html</a></b>: Click this link to open the web page in a new tab of your web browser.
 		<span class="inside-ol">&nbsp;</span>
-		Right-click anywhere in the web page and choose <b>Save as...</b> (Chrome) or <b>Save Page As...</b> (Firefox) from the context menu displayed.
+		Right-click anywhere in the web page and choose <b>View Page Source</b> from the context menu displayed.
+		<span class="inside-ol">&nbsp;</span>
+		Next, right-click anywhere on the web page source and choose <b>Save as...</b> (Chrome) or <b>Save Page As...</b> (Firefox) from the context menu displayed.
 		<span class="inside-ol">&nbsp;</span>
 		Save the web page in the <b>bootstrap</b> sub-folder of your <b>websites</b> folder with the name <b>hero-basic.html</b>
 		<span class="inside-ol">&nbsp;</span>
