--- a/it4women/exercises/intro-bootstrap-menu-footer.html
+++ b/it4women/exercises/intro-bootstrap-menu-footer.html
@@ -85,6 +85,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<p>You can view a finished version of the Bootstrap menu and footer web page you will work in this Tutorial by clicking the image or text link below. The finished web page will open in a new tab of your web browser.</p>
 
 	<a href="final-bootstrap-menu-footer/after/bootstrap-menu-footer.html" target="_blank"><img src="assets/img/intro-bootstrap-menus/final-menu-footer.png" alt="Sample image" style="max-width: 600px"></a>
+
 	<a href="final-bootstrap-menu-footer/after/bootstrap-menu-footer.html" class="link-exercise" target="_blank">bootstrap-menu-footer.html</a>
 
 </section>
@@ -155,7 +156,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<ul>
 		<li><b><a href="final-bootstrap-menu-footer/before/bootstrap-menu-footer.html" target="_blank">bootstrap-menu-footer.html</a></b>: Click this link to open the web page in a new tab of your web browser.
 		<span class="inside-ol">&nbsp;</span>
-		Right-click anywhere in the web page and choose <b>Save as...</b> (Chrome) or <b>Save Page As...</b> (Firefox) from the context menu displayed.
+		Right-click anywhere in the web page and choose <b>View Page Source</b> from the context menu displayed.
+		<span class="inside-ol">&nbsp;</span>
+		Next, right-click anywhere on the web page source and choose <b>Save as...</b> (Chrome) or <b>Save Page As...</b> (Firefox) from the context menu displayed.
 		<span class="inside-ol">&nbsp;</span>
 		Save the web page in the <b>bootstrap</b> sub-folder of your <b>websites</b> folder with the name <b>bootstrap-menu-footer.html</b>
 		<span class="inside-ol">&nbsp;</span>
