--- a/it4women/projects/project-home/index-1.html
+++ b/it4women/projects/project-home/index-1.html
@@ -190,7 +190,15 @@
 
 	<h2>Downloading six web pages</h2>
 	
-	<p>Now you will download the following four web pages.</p>
+	<p>Now you will download the following six web pages.</p>
+
+	<p>In each case, right-click anywhere in the web page and choose <b>View Page Source</b> from the context menu displayed.</p>
+
+	<p>Next, right-click anywhere on the web page source and choose <b>Save as...</b> (Chrome) or <b>Save Page As...</b> (Firefox) from the context menu displayed.</p>
+
+	<p>Ensure the <b>Save as type:</b> dropdown list is set to <b>Webpage, HTML only (*.HTML, *.htm)</b>.</p>
+	<img src="assets/img/file-save-as-html.png" alt="sample image">
+
 	
 	<ol>
 		<li>To your 'main' <b>websites</b> folder, download this <b><a href="../final/project-home/index.html" target="_blank">index.html</a></b> web page that will become your new 'home page'.</li>
