--- a/it4women/js-new/1-first-scripts.html
+++ b/it4women/js-new/1-first-scripts.html
@@ -104,7 +104,6 @@
 		<b>js-exercises</b>
 		<img src="assets/img/introduction/file-explorer-1.png" alt="Javascript"></li>
 
-
 		<li>Download this compressed file:
 		<span class="inside-ol">&nbsp;</span>
 		<a href="js-exercises-1.zip">js-exercises-1.zip</a></li>
@@ -117,7 +116,7 @@
 		<li>This creates a new sub-folder named <b>js-exercises-1</b>.
 		<img src="assets/img/introduction/file-explorer-3.png" alt="Javascript"></li>
 
-		You no longer need the downloaded ZIP file. So you can delete <b>js-exercises-1.zip</b>.</li>
+		<li>You no longer need the downloaded ZIP file. So you can delete <b>js-exercises-1.zip</b>.</li>
 	</ol>
 
 	<p>The complete sub-folder and file structure for this Tutorial is as shown below.</p>
