--- a/it4women/js-new/4-functions-intro.html
+++ b/it4women/js-new/4-functions-intro.html
@@ -82,23 +82,29 @@
 	
 	<p>Follow these steps to download the exercise files for this JavaScript Tutorial:</p>
 	<ol>
-		<li>In your main <b>websites</b> folder, create a new sub-folder with this name:
-		<span class="inside-ol">&nbsp;</span>
-		<b>js-exercises</b></li>
-
-
 		<li>Download this compressed file:
 		<span class="inside-ol">&nbsp;</span>
 		<a href="js-exercises-4.zip">js-exercises-4.zip</a></li>
 
-		<li>Copy the ZIP file to your new <b>websites/js-exercises</b> sub-folder.</li>
+		<li>Copy the ZIP file to your new <b>websites/js-exercises</b> sub-folder.
+		<img src="assets/img/intro-functions/file-explorer-1.png" alt="Javascript"></li>
 
 		<li>Unzip the file.</li>
-		
-	
+
+		<li>This creates a new sub-folder named <b>js-exercises-4</b>.
+		<img src="assets/img/intro-functions/file-explorer-2.png" alt="Javascript"></li>
+
+		<li>You no longer need the downloaded ZIP file. So you can delete <b>js-exercises-4.zip</b>.</li>
 	</ol>
 
+	<p>The complete sub-folder and file structure for this Tutorial is as shown below.</p>
+
+	<img src="assets/img/intro-functions/file-explorer-3.png" alt="Javascript">
+
+	<p>Your exercise file is now ready for you to work with.</p>
+
 </section>
+
 
 <section class="wrapper-content" id="js-functions">
 
@@ -206,7 +212,7 @@ function sayHello() {
 	
 	<p>Is there an error in your function? No. Your function is code is valid.  But it has no effect on the browser window because the function has not been called.</p>
 
-	<p>Leave the <b>>exercise-4-1.html</b> file open in VS Code and your web browser. In the next section, you will add an <i>event handler</i> to your function.</p>
+	<p>Leave the <b>exercise-4-1.html</b> file open in VS Code and your web browser. In the next section, you will add an <i>event handler</i> to your function.</p>
 </section>
 
 
