--- a/it4women/js-new/1-first-scripts.html
+++ b/it4women/js-new/1-first-scripts.html
@@ -740,12 +740,45 @@ or <b>Cancel</b> to close the dialog box.</p>
 	<p>You can close the <b>exercise-1-6.html</b> file when finished.</p>
 
 
-
-
-
-
-
 </section>
+
+
+<section id="github-upload" class="wrapper-content bg-white">
+	<h2>Uploading your JavaScript exercise files to GitHub</h2>
+
+	<p>Follow these steps below to upload your <i>entire</i> <b>js-exercises</b> folder to your website on GitHub.</p>
+
+	<ol>
+
+		<li>Sign in to Github and click the name of the repository (&#8216;repo&#8217;) that holds your web pages.</li>
+
+		<li>On the next GitHub screen displayed, click the <b>Add file</b> button near the right of the screen and then choose <b>Upload files</b> from the dropdown list. 
+		<img src="assets/img/introduction/github-btn-add-file-dropdown.png" alt="github-upload-portfolio"></li>
+
+		<li>In File/Windows Explorer, select your <b>js-exercises</b> folder, and drag-and-drop it to your repository on GitHub. 
+		
+		<img src="assets/img/introduction/github-upload-drag-drop.png" alt="Introduction to Images"></li>
+
+		<li>Scroll down to the bottom of the GitHub screen, and accept or edit the short message (<span style="color:gray">Add files via upload</span>) in the <b>Commit changes</b> box.
+
+		<span class="inside-ol">&nbsp;</span>
+
+		Finally, click the green <b>Commit changes</b> button to upload your entire <b><b>js-exercises</b></b> folder and all the files it contains.</li>
+
+	</ol>
+
+	<p>Your uploaded files are published on GitHub at a web address similar to the following, where <b>username</b> is the username you have chosen for your GitHub account:</p>
+
+	<p><b>https://username.github.io/js-exercises/js-exercises-1/introduction/exercise-1-1.html<br>
+	https://username.github.io/js-exercises/js-exercises-1/introduction/exercise-1-2.html<br>
+	https://username.github.io/js-exercises/js-exercises-1/introduction/exercise-1-3.html<br>
+	https://username.github.io/js-exercises/js-exercises-1/introduction/exercise-1-4.html<br>
+	https://username.github.io/js-exercises/js-exercises-1/introduction/exercise-1-5.html<br>
+	https://username.github.io/js-exercises/js-exercises-1/introduction/exercise-1-6.html</b></p>
+
+	<p>It may take a few minutes for your uploaded files to appear on GitHub.</p>
+</section>
+
 
 <section class="wrapper-content">
 
@@ -810,4 +843,23 @@ visit to my web page?");
 
 <p>Comment tags always come in pairs. The opening tag is a forward slash and an asterisk; the closing tag is the reverse. The asterisks go on the inside and the slashes on the outside.</p>
 
+
+
+
+		<p><br>Return to <a href="../index.html">Contents</a>.</p>
+
+
 </section>
+
+
+
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+
+
+ </BODY>
+</HTML>
+
