--- a/it4women/js-new/4-functions-intro.html
+++ b/it4women/js-new/4-functions-intro.html
@@ -315,6 +315,40 @@ document.getElementById("btnGreeting").addEventListener("click", sayHello);
 </section>
 
 
+
+<section id="github-upload" class="wrapper-content bg-white">
+	<h2>Uploading your JavaScript exercise files to GitHub</h2>
+
+	<p>Follow these steps below to upload your <i>entire</i> <b>js-exercises</b> folder to your website on GitHub.</p>
+
+	<ol>
+
+		<li>Sign in to Github and click the name of the repository (&#8216;repo&#8217;) that holds your web pages.</li>
+
+		<li>On the next GitHub screen displayed, click the <b>Add file</b> button near the right of the screen and then choose <b>Upload files</b> from the dropdown list. 
+		<img src="assets/img/introduction/github-btn-add-file-dropdown.png" alt="github-upload-portfolio"></li>
+
+		<li>In File/Windows Explorer, select your <b>js-exercises</b> folder, and drag-and-drop it to your repository on GitHub. 
+		
+		<img src="assets/img/introduction/github-upload-drag-drop.png" alt="Introduction to Images"></li>
+
+		<li>Scroll down to the bottom of the GitHub screen, and accept or edit the short message (<span style="color:gray">Add files via upload</span>) in the <b>Commit changes</b> box.
+
+		<span class="inside-ol">&nbsp;</span>
+
+		Finally, click the green <b>Commit changes</b> button to upload your entire <b><b>js-exercises</b></b> folder and all the files it contains.</li>
+
+	</ol>
+
+	<p>Your uploaded files are published on GitHub at a web address similar to the following, where <b>username</b> is the username you have chosen for your GitHub account:</p>
+
+	<p><b>https://username.github.io/js-exercises/js-exercises-4/intro-functions/exercise-4-1.html<br>
+	https://username.github.io/js-exercises/js-exercises-4/intro-functions/exercise-4-2.html<br></b></p>
+
+	<p>It may take a few minutes for your uploaded files to appear on GitHub.</p>
+</section>
+
+
 <section id="tutorial-summary" class="wrapper-content">
 
 
@@ -347,6 +381,21 @@ function sayThankYou() {
 <pre class="language-html">
 document.getElementById("btnGreeting").addEventListener("click", sayHello);
 </pre>
+
+
+		<p><br>Return to <a href="../index.html">Contents</a>.</p>
+
+
+</section>
+
+
+
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+
 
  </BODY>
 </HTML>
