--- a/it4women/index.html
+++ b/it4women/index.html
@@ -413,17 +413,30 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<div class="flex-grid">
 
 		<div class="item-3">
-			<p><a href="js-new/1-first-scripts.html">Writing Your First Scripts</a></p>
+			<p><a href="js-new/1-first-scripts.html" style="font-size:18px"><b>1: Writing Your First Scripts</b></a></p>
 		</div>
 
 		<div class="item-3">
-			<p><a href="js-new/1-first-scripts.html">&nbsp</a></p>
+			<p><a href="js-new/2-objects-properties-methods.html" style="font-size:18px"><b>2: Objects, Properties and Methods</b></a></p>
 		</div>
 
 
 		<div class="item-3">
-			<p><a href="js-new/1-first-scripts.html">&nbsp</a></p>
+			<p><a href="js-new/3-variables-operators.html" style="font-size:18px"><b>3: Variables and Operators</b></a></p>
 		</div>
+	</div>
+
+	<div class="flex-grid">
+
+		<div class="item-3">
+			<p><a href="js-new/4-functions-intro.html" style="font-size:18px"><b>4: Introduction to Functions</b></a></p>
+		</div>
+
+		<div class="item-3"><p>&nbsp;</p></div>
+		<div class="item-3"><p>&nbsp;</p></div>
+		<div class="item-3"><p>&nbsp;</p></div>
+
+
 
 	</div><!--- /flex-grid -->
 
