--- a/it4women/exercises/intro-bootstrap-form.html
+++ b/it4women/exercises/intro-bootstrap-form.html
@@ -159,7 +159,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 
 
-<section id="formspree-forms" class="wrapper-content">
+<section id="formspree-project" class="wrapper-content">
 	<h2>Creating a Project and Form in Formspree</h2>
 
 	<p>In Formspree, a <i>Project</i> is a way of organising different forms &#8211; located on the same or different websites &#8211; together in a single group. So, before you can create a form, you must first create a Project to store that form. Follow these steps:</p>
