--- a/it4women/projects/final/project-home/javascript/index.html
+++ b/it4women/projects/final/project-home/javascript/index.html
@@ -29,7 +29,19 @@
 
     <!-- Link to icons for Font Awesome 5 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" rel="stylesheet" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous">
-    
+
+	<!-- Styles for Cookie Consent Popup Message  -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=GGGGGG"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'GGGGGG');
+    </script>
+
 </head>
 
 <body>
@@ -70,7 +82,7 @@
 
 
    <div class="container-fluid hero-block hero-7">
-    <h1>Mary Smth</h1>
+    <h1>Mary Smith</h1>
     <h2>JavaScript</h2>
 
     <!-- Buttons start here -->
@@ -152,5 +164,22 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+    <script>
+    window.cookieconsent.initialise({
+    "palette": {
+        "popup": {
+        "background": "#000"
+        },
+        "button": {
+        "background": "#f1d600"
+        }
+    },
+    "content": {
+        "href": "https://mywesite.github.io/privacy.html"
+    }
+    });
+    </script>
+        
 </body>
 </html>
