--- a/it4women/index.html
+++ b/it4women/index.html
@@ -552,7 +552,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<h2>Building your Personal Portfolio Website</h2>
 	<p>In this project you will create your Bootstrap-powered, six-page personal website.</p>
 
-	<p><a href="projects/project-home/index-1.html"><b>Your Personal Portfolio Website</a></b></p>
+	<p><a href="projects/project-home/index-1.html"><b>Downloading your Template Files</a></b></p>
+	<p><a href="projects/project-home/index-2.html"><b>Updating your Website Content</a></b></p>
+
 
 </section>
 
