--- a/it4women/projects/project-home/index-1.html
+++ b/it4women/projects/project-home/index-1.html
@@ -290,197 +290,25 @@
 </section>
 
 
-<!--
-<section id="update-hyperlinks" class="wrapper-content bg-white">
-
-	<h2>Update the menu hyperlinks in your web pages</h2>
-
-	<p>Your next step is to update the hyperlinks in your web pages. Here are the steps.</p>
+<section id="github-upload" class="wrapper-content">
+	<h2>Upload your website to GitHub</h2>
+	<p>The final step is to upload your website pages and folders to GitHub.</p>
 
 	<ol>
-		<li>Ensure that the four web pages for your personal website are open in Visual Studio Code. Close any other open files.
-		<img src="assets/img/vscode-html-files-new.png"  ALT="Project Portfolio">
+		<li>Sign in to your GitHub account and, at the left of the screen, click the name of the repository that holds your web pages.</li>
 
-
-		<li>Choose the <b>Edit | Replace in Files</b> command to open the multi-file search-and-replace option at the left of the Visual Studio Code screen.</li>
-
-		<li>In the Search box, enter <b>index-1.html</b> (or <b>index-2.html</b> or <b>index-3.html</b>, as appropriate).
-		<span class="inside-ol">&nbsp;</span>
-		In the Replace box, enter <b>index.html</b>.
-
-		<img src="assets/img/vscode-replace-index.png"  ALT="Project Portfolio"></li>
-
-		<li>At the right of the Replace box, click the <b>Replace All</b> icon. And then click the <b>Replace</b> button to confirm.
-
-		<img src="assets/img/vscode-replace-index-all.png"  ALT="Project Portfolio"></li>
-
-		<li>You need to perform two more search-and-replace operations.
-
-		<ul>
-			<li>In the Search box, enter <b>privacy-1.html</b> (or <b>privacy-1.html</b> or <b>privacy-1.html</b>, as appropriate).
-			<span class="inside-ol">&nbsp;</span>
-			In the Replace box, enter <b>privacy.html</b>, and confirm your replacement.</li>
-			<li>In the Search box, enter <b>global-1.css</b> (or <b>global-2.css</b> or <b>global-3.css</b>, as appropriate).
-			<span class="inside-ol">&nbsp;</span>
-			In the Replace box, enter <b>global.css</b>, and confirm your replacement.</li>
-
-		</ul>
-		</li>
-
-		<li>Open the stylesheet file you want to use for your personal website - named <b>global-1.css</b> or <b>global-2.css</b> or <b>global-3.css</b>.
-		<span class="inside-ol">&nbsp;</span>
-		Use the <b>File | Save As</b> command to save the stylesheet with the new name of <b>global.css</b>.</li>
-
-		<li>Finally, use the <b>File | Save All</b> command to save all your open files.</li>
-	</ol>
-
-
-	<p>That's all your search-and-replace operations complete.</p>
-
-	<p>Open your four web pages in your web browser and check that:</p>
-	
-	<ul>
-		<li>All four web pages use the correct file name for the stylesheet - <b>global.css</b>.</li>
-		<li>All hyperlinks between the web pages are to files named <b>index.html</b> or <b>privacy.html</b>.</li>
-	</ul>
-</section>
-
-<section id="meta-tags" class="wrapper-content">
-	<h2>Update the meta tags in the &lt;head&gt;</h2>
-	<p>In the <b>&lt;head&gt;</b> of your four web pages, within the <b>&lt;title&gt;</b> and <b>&lt;author&gt;</b> meta tags, you can see the name 'Mary Smith.'</p>
-	<p>Replace this with your own name. You may also wish to change the sample text in the <b>&lt;description&gt;</b> meta tags.<p>
-	<img src="assets/img/vscode-meta-tags.png" alt="vscode-meta-tags">
-	<p>When finished, save the four HTML files.</p>
-</section>
-
-
-<section id="google-analytics" class="wrapper-content">
-	<h2>Update the Google Analytics ID</h2>
-	<p>Near the top of your four HTML files, just before the closing &lt;/head&gt; tag, you can see a sample Google Analytics Tracking Code.</p>
-
-	<img src="assets/img/vscode-ga.png" alt="vscode-ga">
-
-	<p>Each Google Tracking Code has a unique ID in its first and last line. For each of your fur web pages, replace the sample Google Tracking ID with your own Google Tracking ID. The instructions for viewing your website&#8217;s unique Google Tracking ID are <a href="https://munnelly.com/webdev/setting-up-google-analytics.html#google-analytics-view">here</a>.</p>
-	
-	<p>When finished, save your four HTML files.</p>
-
-</section>
-
-
-
-<section id="privacy-message" class="wrapper-content">
-	<h2>Update the privacy pop-up code and message</h2>
-	<p>You need to edit the &#8216;pop-up&#8216; privacy code and message in all four of your web pages.</p>
-	
-	<ol>
-		<li>Within the &lt;head&gt; at the top of your HTML files, you can see a link to the stylesheet for the privacy pop-up message.
-		<img src="assets/img/vscode-privacy-head.png" alt="vscode-privacy-head">
-		<li>At the bottom of your web pages, just before the closing &lt;/body&gt; tag, you can see the JavaScript code for the privacy pop-up message.
-		<img src="assets/img/vscode-privacy-body.png" alt="vscode-privacy-body">
-		Near the end of the lines of the JavaScript code, you can see the web address of the privacy page. For all four web pages, change the <b>ibat-web-dev.github.io</b> username to your username on GitHub.</li>
-		<li>When finished, save your four HTML files.</li>
-	</ol>
-
-</section>
-
-
-<section id="update-contact-footer" class="wrapper-content">
-
-	<h2>Update your contact details in the footer</h2>
-
-	<p>In the footer section of the four web pages are various contact details and social media hyperlinks you will need to update.</p>
-
-	<img src="assets/img/contact-footer.png" alt="vscode-ga">
-
-	<p>Change the name 'Mary Smith' and the various contact details to your own. You can add or remove different social media contact points, such as Twitter, Facebook, YouTube or Instagram, as required.</p>
-
-	<p>When finished, save your four HTML files.</p>
-
-</section>
-
-
-<section id="update-contact-mobile" class="wrapper-content">
-
-	<h2>Update your contact details in the mobile menu</h2>
-
-	<p>For all four web pages, in the <b>flyout-menu</b> section of the mobile menu, are more details you will need to change.</p>
-
-	<img src="assets/img/contact-mobile-menu.png" alt="vscode-ga">
-
-	<p>Change the name 'Mary Smith', the profile image and the various contact details to your own. You can add or remove different social media contact points, such as Twitter, Facebook, YouTube or Instagram, as required.</p>
-
-	<p>When finished, save your four HTML files.</p>
-
-</section>
-
-<section id="update-endpoint" class="wrapper-content">
-
-	<h2>Update your contact form endpoint</h2>
-	<p>You need to update the form in your contact page so that details entered to the form by users are forwarded to your email address.</p>
-	<ol>
-		<li>In Visual Studio Code, open the <b>index.html</b> file in your <b>/contact</b> sub-folder.</li>
-
-		<li>Update the form&#8217;s <b>action</b> value by copying-and-pasting the endpoint value from <a href="../project-smoothies-form/index.html#formspree-forms">Formspree</a>. See the example shown below. 
-		<img src="../assets/img/project-web-agency-form/vscode-email-update.png" alt="fa-icons-copy"></li>
-		<li>Save your <b>index.html</b> file when finished.</li>
-
-	</ol>
-
-</section>
-
-
-<section id="customise-design" class="wrapper-content">
-
-	<h2>Customise the design elements</h2>
-
-	<p>Feel free to make any changes you require to content and design of the four web pages.</p>
-
-	<ul>
-		<li>To change one or more Google fonts, see the Tutorial on <a href="https://www.munnelly.com/webdev/exercises/working-with-google-fonts.html">Working with Google Fonts</a></li>
-
-		<li>To change one or more images, see the Tutorial on <a href="https://www.munnelly.com/webdev/exercises/working-with-images.html">Working with Images</a></li>
-
-	</ul>
-
-
-
-	<p>When finished, save your four HTML files and your stylesheet.</p>
-
-</section>
-
-
-
-
-
-
-<section id="publish-github" class="wrapper-content">
-	<h2>Upload your project to GitHub</h2>
-	<p>The final step is to upload your project to GitHub.</p>
-
-	<ol>
-		<li>If you are not already signed in to your GitHub account, sign in now.</li>
-
-		<li>On the left of your GitHub home page, click the name of the repository that holds your web pages.</li>
-
-		<li>With your main repository displayed on your GitHub screen, click the <b>Add file</b> button and, from the dropdown list displayed, choose the option <b>Upload files</b>.
-
+		<li>On the next screen, click the <b>Add file</b> button and then choose <b>Upload files</b> from the dropdown list.
 		<img src="assets/img/github-btn-add-file-dropdown.png" alt="Project Animation Google Fonts"></li>
 		
 
 		<li>In File/Windows Explorer on your computer, display your <b>websites</b> folder and then drag-and-drop the following files and sub-folders to the GitHub tab in your web browser.
-		<img src="assets/img/github-upload-drag-drop.png" alt="github-upload-drag-drop">
-		Do not include the <b>portfolio</b> sub-folder in the upload. Because the total number of files in this upload operation may exceed 100. This is the limit for any one upload to GitHub.</li>
+		<img src="assets/img/github-upload-drag-drop.png" alt="github-upload-drag-drop"></li>
 
-		<li>Scroll down to the bottom of the GitHub screen, enter a short message in the <b>Commit changes</b> box, click the <b>Commit changes</b> button, and wait for the upload to complete.</li>
+		<li>Scroll down to the bottom of the GitHub screen, and accept or edit the short message (<span style="color:gray">Add files via upload</span>) in the <b>Commit changes</b> box.
 
-		<li>After this upload is complete, GitHub redisplays your main repository screen.
 		<span class="inside-ol">&nbsp;</span>
-		Click the folder named <b>portfolio</b>.
-		<img src="assets/img/github-btn-add-file.png" alt="github-upload-drag-drop"></li>
-		
-		<li>In File/Windows Explorer on your computer, display your <b>portfolio</b> folder and then drag-and-drop the <b>index.html</b> file to the GitHub tab in your web browser.</li>
-		<li>Scroll down to the bottom of the GitHub screen, enter a short message in the <b>Commit changes</b> box, click the <b>Commit changes</b> button, and wait for the upload to complete.</li>
 
+		Finally, click the green <b>Commit changes</b> button to upload your files and folders.</li>
 
 	</ol>
 
@@ -492,20 +320,12 @@
 
 	<p>It may take a few minutes for your uploaded files to appear on GitHub.</p>
 
-	
+	<p><br><br>Return to <a href="../../index.html">Contents</a>.</p>
+
 	<p>&nbsp;</p>
-</section>
--->
-
-<section id="download-portfolio" class="wrapper-content bg-white">
-
-<p><br><br>Return to <a href="../../index.html">Contents</a>.</p>
-
+		<p>&nbsp;</p>
 </section>
 
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
 
 <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
 <script>
