--- a/it4women/projects/project-home/index-1.html
+++ b/it4women/projects/project-home/index-1.html
@@ -164,7 +164,9 @@
 		websites/<b>contact</b><br>
 		websites/<b>javascript</b><br>
 		websites/<b>portfolio</b><br>
-		websites/<b>wordpress</b></li>
+		websites/<b>wordpress</b>
+		<img src="assets/img/file-explorer-0.png" alt= "sample image">
+		</li>
 
 		<li>Next, inside your <b>websites/assets</b> sub-folder, create the following sub-folders (if they do not already exist):
 		<span class="inside-ol">&nbsp;</span>
