--- a/it4women/projects/project-home/index-1.html
+++ b/it4women/projects/project-home/index-1.html
@@ -64,6 +64,22 @@
 </div>
 
 
+<section class="wrapper-content bg-white">
+	<div class="box-toc">
+		<h2>Contents</h2>
+		<p><a href="#introduction">Introduction</a></p>
+		<p><a href="#sample-websites">Sample personal websites</a></p>
+		<p><a href="#project-folders">Creating your website sub-folders</a></p>
+		<p class="toc-indent"><a href="#home-rename">Renaming your home page</a></p>
+		<p><a href="#download-portfolio">Downloading six web pages</a></p>
+		<p><a href="#download-assets">Downloading placeholder assets</a></p>
+		<p><a href="#download-global">Downloading the global stylesheet file</a></p>
+		<p><a href="#download-custom">Downloading the bootstrap-custom.css stylesheet</a></p>
+		<p><a href="#github-upload">Uploading your website to GitHub</a></p>
+	</div>
+</section>
+
+
 <section id="introduction" class="wrapper-content bg-white">
 	<h2>Introduction</h2>
 
@@ -84,8 +100,7 @@
 
 	<p><b><a href="../final/project-home/index.html" target="_blank">Sample Portfolio Website</a></b></p>
 
-
-</section> 
+</section>
 
 
 <section id="sample-websites" class="wrapper-content bg-white">
@@ -150,7 +165,7 @@
 		</div>
 	</div>
 
-</section>s
+</section>
 
 <section id="project-folders" class="wrapper-content bg-white">
 
@@ -178,7 +193,7 @@
 
 	</ol>
 
-	<h3>Renaming your current home page</h3>
+	<h3 id="home-rename">Renaming your current home page</h3>
 	<p>Your <b>websites</b> folder currently contains a file named <b>index.html</b> that lists and links to the exercise files your created earlier in this course.</p>
 
 	<p>Rename this file to <b>exercises.html</b>.</p>
@@ -226,7 +241,7 @@
 
 
 
-<section id="download-privacy" class="wrapper-content bg-white">
+<section id="download-assets" class="wrapper-content bg-white">
 
 	<h2>Downloading placeholder assets</h2>
 	<p>Next, you need to download some placeholder asset files for your web pages.</p>
@@ -254,15 +269,6 @@
 			<a href="assets/img/hero-wordpress.jpg" target="_blank">Link</a>
 		</div>
 
-		<!--
-		<div class="item-3">
-			<img src="assets/img/favicon.png" style="max-width: 300px; height: auto; margin-bottom:12px" alt="sample image">
-			<a href="assets/img/favicon.png" target="_blank">Link</a>
-		</div>
-
-		<div class="item-3">&nbsp;</div>
-
-		-->
 	
 	</div><!-- End parent flexbox container -->
 
@@ -279,15 +285,33 @@
 
 
 
-<section id="download-portfolio" class="wrapper-content bg-white">
+<section id="download-global" class="wrapper-content bg-white">
 
-	<h2>Downloading your global stylesheet file</h2>
+	<h2>Downloading the global stylesheet file</h2>
 	
 	<p>Download the following stylesheet file to your <b>websites/assets/css</b> sub-folder.</p>
 	
 	<p><a href="assets/img/global.css" target="_blank">global.css</a></p>
 
 	<p>This stylesheet file controls the appearance of all the pages on your personal website (except individual project web pages).</p>
+
+</section>
+
+
+<section id="download-custom" class="wrapper-content bg-white">
+
+	<h2>Downloading the bootstrap-custom.css stylesheet</h2>
+	<p>This CSS file has a few updates since you last downloaded it.</p>
+
+	<ul>
+		<li>The red-border visual guides have been removed.</li>
+		<li>The size of all text elements is 20% larger. (Except for hero blocks headings that are set in your <b>global.css</b> file.)</li>
+		<li>Hyperlink styles have been improved with a new CSS class named <b>fancy-link</b>. (Hyperlinks in the menu and footer are not affected.)</li>
+	</ul>
+
+	<p>Download the updated stylesheet file to your <b>websites/assets/css</b> sub-folder.</p>
+	
+	<p><a href="../final/project-home/assets/css/bootstrap-custom.css" target="_blank">bootstrap-custom.css</a></p>
 
 </section>
 
