--- a/it4women/projects/project-home/index-2.html
+++ b/it4women/projects/project-home/index-2.html
@@ -220,7 +220,7 @@
 
 	<p>In the <a href="https://www.munnelly.com/webdesign/exercises/setting-up-google-analytics.html">Setting Up Google Analytics</a> Tutorial, you obtained a unique Google Analytics ID just for your website.</p>
 
-	<p>On all six of the sample web pages, just before the closing <span class="syn">&lt;/head&gt;</span> tag, you can see the Google Analytics code with a placeholder ID inserted twice.</p>
+	<p>In your template 'home page', just before the closing <span class="syn">&lt;/head&gt;</span> tag, you can see the Google Analytics code with a placeholder ID inserted twice.</p>
 
 	<img src="assets/img/ga-fake.png" alt="sample image">
 
@@ -229,6 +229,8 @@
 	<p>All the relevant steps for obtaining your Google Analytics iD are contained in the link below.</p>
 
 	<p><a href="https://www.munnelly.com/webdesign/exercises/setting-up-google-analytics.html#google-analytics-view">Viewing a Google Analytics Tracking Code</a></p>
+
+	<p>In the other five template web pages, you need to paste the full Google Analytics script, and not just the unique ID.</p>
 
 	<p>Without the correct ID, Google Analytics cannot track visits to your website.</p>
 
