--- a/it4women/projects/project-home/index-1.html
+++ b/it4women/projects/project-home/index-1.html
@@ -60,7 +60,7 @@
 
 <div class="jumbotron tutorial">
 	<h3><a href="../../index.html" title="All HTML projects">Contents&nbsp;&nbsp;></a></h3>
-	<h1>Downloadng Your Website Template</h1>
+	<h1>Downloading Your Website Template</h1>
 </div>
 
 
