--- a/it4women/projects/project-home/index-2.html
+++ b/it4women/projects/project-home/index-2.html
@@ -68,7 +68,7 @@
 	<p>At the end of this Tutorial you will be able to:</p>
 	<ul>
 		<li>Update the content of a website template with your own text, contact details and CV.</li>
-		<li>Add your own website logo, background images and videos, and favicon.</li>
+		<li>Add your own website logo and favicon.</li>
 		<li>Add your unique Google Analytics ID, cookie privacy and contact form details.</li>
 		<li>Add extra web pages to your site.</li>
 
@@ -453,4 +453,7 @@
 
 </body>
 </html>
+
+
+
 
