--- a/it4women/exercises/colours-and-web-design.html
+++ b/it4women/exercises/colours-and-web-design.html
@@ -622,6 +622,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<p><a href="https://colors.muz.li/" target="_blank" rel="noopener" class="further-title">Muzli Colors</a><br>
 		A colour palette/schemes generator.</p>
 
+		<p><a href="https://flatuicolors.com/" target="_blank" rel="noopener" class="further-title">Flat UI 280 Colours</a><br>
+		A range of sample palettes.</p>
+
+		<p><a href="https://htmlcolorcodes.com/color-chart/flat-design-color-chart/" target="_blank" rel="noopener" class="further-title">Flat Design Colour Chart</a><br>
+		Another range of sample palettes.</p>
+
+
 	</div>
 		<p><br><br>Return to <a href="../index.html">Contents</a>.</p>
 
