--- a/it4women/index.html
+++ b/it4women/index.html
@@ -554,8 +554,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<p><a href="projects/project-home/index-1.html"><b>Downloading Your Website Template</a></b></p>
 	<p><a href="projects/project-home/index-2.html"><b>Updating your Website Content</a></b></p>
-
-
+	<p><a href="projects/project-home/index-3.html"><b>Updating your Website Styles</a></b></p>
 </section>
 
 
