--- a/it4women/js-new/5-user-input.html
+++ b/it4women/js-new/5-user-input.html
@@ -330,9 +330,9 @@ document.getElementById("resultNum").innerHTML = "&lt;b&gt;"+resultdNum+"&lt;\/b
 <p>You can close the <b>exercise-5-2.html</b> file when finished.</p>
 
 
-<h3>Setting decimal places with the <span>toFixed(n)</span> method</h3>
+<h3>Setting decimal places with the <span>toFixed()</span> method</h3>
 
-<p>When displaying financial amounts on screen it is conventional to format them so that they have a fixed number of decimal places. Values such as 12.80 and 45.00 look much better than 12.8 and 45. JavaScript provides a toFixed() method for this purpose. You enter the number of decimal places you require in the method's parenthesis. It works only with numeric variables.</p>
+<p>When displaying financial amounts on screen it is conventional to format them so that they have a fixed number of decimal places. Values such as 12.80 and 45.00 look much better than 12.8 and 45. JavaScript provides a <span class="syn">toFixed()</span> method for this purpose. You enter the number of decimal places you require in the method's parenthesis. It works only with numeric variables.</p>
 
 <p>If the variable named 'myNum' contains 123.5, for example, the following statement reformats the value in the variable to 123.50.</p>
 
