--- a/it4women/js-new/5-user-input.html
+++ b/it4women/js-new/5-user-input.html
@@ -43,7 +43,7 @@
 		<li>Assign the user-entered value to a JavaScript variable.</li>
 		<li>Display the variable's value on a web page.</li>
 		<li>Convert a string variable to a numeric variable with a integral or floating point value using the <span class="syn">parseInt()</span> or <span class="syn">parseFloat()</span> method</li>
-		<li>Format the number of decimal places in a numeric variable using the <span class="syn">toFixed()v method</li>
+		<li>Format the number of decimal places in a numeric variable using the <span class="syn">toFixed()</span> method</li>
 	</ul>
 
 	<h3>Exercise Files</h3>
