--- a/it4women/js-new/5-user-input.html
+++ b/it4women/js-new/5-user-input.html
@@ -69,20 +69,14 @@
 		<span class="inside-ol">&nbsp;</span>
 		<a href="js-exercises-5.zip">js-exercises-5.zip</a></li>
 
-		<li>Copy the ZIP file to your new <b>websites/js-exercises</b> sub-folder.
-		<img src="assets/img/intro-functions/file-explorer-1.png" alt="Javascript"></li>
+		<li>Copy the ZIP file to your <b>websites/js-exercises</b> sub-folder.
 
 		<li>Unzip the file.</li>
 
-		<li>This creates a new sub-folder named <b>js-exercises-5</b>.
-		<img src="assets/img/intro-functions/file-explorer-2.png" alt="Javascript"></li>
+		<li>This creates a new sub-folder named <b>js-exercises-5</b>.</li>
 
 		<li>You no longer need the downloaded ZIP file. So you can delete <b>js-exercises-5.zip</b>.</li>
 	</ol>
-
-	<p>The complete sub-folder and file structure for this Tutorial is as shown below.</p>
-
-	<img src="assets/img/intro-functions/file-explorer-3.png" alt="Javascript">
 
 	<p>Your exercise file are now ready for you to work with.</p>
 
