--- a/it4women/index.html
+++ b/it4women/index.html
@@ -432,11 +432,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<p><a href="js-new/4-functions-intro.html" style="font-size:18px"><b>4: Introduction to Functions</b></a></p>
 		</div>
 
+		<div class="item-3">
+			<p><a href="js-new/5-user-input.html" style="font-size:18px"><b>5: User Input</b></a></p>
+		</div>
 		<div class="item-3"><p>&nbsp;</p></div>
-		<div class="item-3"><p>&nbsp;</p></div>
-		<div class="item-3"><p>&nbsp;</p></div>
-
-
 
 	</div><!--- /flex-grid -->
 
