--- a/it4women/js-new/2-objects-properties-methods.html
+++ b/it4women/js-new/2-objects-properties-methods.html
@@ -87,7 +87,7 @@
 		<span class="inside-ol">&nbsp;</span>
 		<a href="js-exercises-2.zip">js-exercises-2.zip</a></li>
 
-		<li>Copy the ZIP file to your new <b>websites/js-exercises</b> sub-folder.
+		<li>Copy the ZIP file to your <b>websites/js-exercises</b> sub-folder.
 		<img src="assets/img/objects-properties-methods/file-explorer-1.png" alt="Javascript"></li>
 
 		<li>Unzip the file.</li>
@@ -199,6 +199,9 @@
 
 	<p style="font-weight:bold;color: darkgray;margin-bottom:-26px; font-style:italic">Microsoft Edge</p>
 	<img src="assets/img/objects-properties-methods/browser-edge.png" alt="Javascript">
+
+
+	<p>The information can be a little misleading. For example, the Google Chrome, Apple Safari and Microsoft Edge web browsers all display as 'Mozilla'.</p>
 
 
 	<p>In JavaScript the standard format for writing an object and one of its properties is as follows.</p>
