--- a/it4women/js-new/3-variables-operators.html
+++ b/it4women/js-new/3-variables-operators.html
@@ -98,7 +98,7 @@
 		<span class="inside-ol">&nbsp;</span>
 		<a href="js-exercises-3.zip">js-exercises-3.zip</a></li>
 
-		<li>Copy the ZIP file to your new <b>websites/js-exercises</b> sub-folder.
+		<li>Copy the ZIP file to your <b>websites/js-exercises</b> sub-folder.
 		<img src="assets/img/variables-operators/file-explorer-1.png" alt="Javascript"></li>
 
 		<li>Unzip the file.</li>
