--- a/it4women/js-new/5-user-input.html
+++ b/it4women/js-new/5-user-input.html
@@ -34,7 +34,7 @@
 
 
 <section id="learning-goals" class="wrapper-content">
-	<h3>Objectives</h3>
+	<h2>Learning Goals</h2>
 
 	<p>In this Tutorial you will learn how to:</p>
 
@@ -57,6 +57,23 @@
 
 	</ul>
 
+</section>
+
+
+<section class="wrapper-content">
+
+	<div class="box-toc">
+		<h2>Contents</h2>
+		<p><a href="#files-download">Downloading your JavaScript exercise files</a></p>
+		<p><a href="#input-field">Using HTML input fields to capture user-entered data</a></p>
+		<p class="toc-indent"><a href="#ex-5-1">Exercise 5.1: Capturing a user-entered value with an input field</a></p>
+		<p class="toc-indent"><a href="#ex-5-2">Exercise 5.2: Adding a Reset button to your web page</a></p>
+		<p><a href="#user-numbers">Handling user-entered numbers</a></p>
+		<p class="toc-indent"><a href="#ex-5-3">Exercise 5.3: Working with numeric user data</a></p>
+		<p><a href="#parse">The <span>parseInt()</span> and <span>parseFloat</span> methods</a></p>
+		<p><a href="#toFixed">Setting decimal places with the toFixed() method</a></p>
+		<p><a href="#github-upload">Uploading your JavaScript exercise files to GitHub</a></p>
+	</div>
 </section>
 
 <section class="wrapper-content">
@@ -82,7 +99,9 @@
 
 </section>
 
-<section class="wrapper-content">
+
+
+<section id="input-field" class="wrapper-content">
 
 <h2>Using HTML input fields to capture user-entered data</h2>
 
@@ -127,7 +146,8 @@ let userInput = document.getElementById("fName").value;
 
 <p>Exercise 5.1 takes you through the steps of assigning a user-entered value to a variable, and then displaying that value on the web page.</p>
 
-<h3>Exercise 5.1: Capturing a user-entered value with an input box</h3>
+
+<h3 id="ex-5-1">Exercise 5.1: Capturing a user-entered value with an input field</h3>
 
 <p>In your <b>websites/js-exercises/user-input</b> sub-folder</b>, open the following file in VS Code and your web browser:</p>
 
@@ -201,7 +221,7 @@ document.getElementById("resultBox").innerHTML = "&lt;b&gt;"+userInput+"&lt;\/b&
 
 <p>Exercise 5.2 takes you through the steps of assigning a user-entered value to a variable, and then displaying that value on the web page.</p>
 
-<h3>Exercise 5.2: Add a Reset button to your web page</h3>
+<h3 id="ex-5-2">Exercise 5.2: Adding a Reset button to your web page</h3>
 <p>A 'Reset' or 'Clear' button enables user to remove a value they may have entered to the input field. Let's add one to the web page you have worked on in the previous exercise.</p>
 
 <p>In VS Code and your web browser, open the following file.</p>
@@ -234,24 +254,27 @@ function resetAll() {
 
 <p>You can close the <b>exercise-5-2.html</b> file when finished.</p>
 
+</section>
 
 
-<h2>Handling user-entered numbers</h2>
+<section id="user-numbers" class="wrapper-content">
 
-<p>It is not only strings such as names of email addresses that you will want to capture in HTML forms. You will also want to capture order quantities, financial amounts and other numbers. </p>
+	<h2>Handling user-entered numbers</h2>
 
-<p>Because an HTML text box regards everything entered to it as a string, you need to convert string variables containing numbers to actual numeric variables before using the user-entered values in calculations.</p>
+	<p>It is not only strings such as names of email addresses that you will want to capture in HTML forms. You will also want to capture order quantities, financial amounts and other numbers. </p>
+
+	<p>Because an HTML text box regards everything entered to it as a string, you need to convert string variables containing numbers to actual numeric variables before using the user-entered values in calculations.</p>
 
 
-<p>Exercise 5.3 helps you understand why you need to do this <i>type conversion</i>.</p>
+	<p>Exercise 5.3 helps you understand why you need to do this <i>type conversion</i>.</p>
 
-<h3>Exercise 5.3: Working with numeric user data</h3>
+	<h3 id="ex-5-3">Exercise 5.3: Working with numeric user data</h3>
 
-<p>In VS Code and your web browser, open the following file.</p>
+	<p>In VS Code and your web browser, open the following file.</p>
 
-<p><a href="assets/exercises/user-input/exercise-5-3.html" target="_blank">exercise-5-3.html</a></p>
+	<p><a href="assets/exercises/user-input/exercise-5-3.html" target="_blank">exercise-5-3.html</a></p>
 
-<p>In the HTML you can see two input fields, two buttons and a single two <span class="syn">div</span> box for displaying the sum of the two numbers.</p>
+	<p>In the HTML you can see two input fields, two buttons and a single two <span class="syn">div</span> box for displaying the sum of the two numbers.</p>
 
 
 <p>Scroll down to the JavaScript code at the bottom.</p>
@@ -281,7 +304,14 @@ document.getElementById("resultNum").innerHTML = "&lt;b&gt;"+resultdNum+"&lt;\/b
 <p>The result you see is probably not the answer you want.</p>
 
 
-<h3>The <span style='76'>parseInt() and parseFloat Methods</h3>
+</section>
+
+
+<section id="parse" class="wrapper-content">
+
+
+
+<h2 id="toFixed">The <span>parseInt()</span> and <span>parseFloat</span> methods</h2>
 
 <p>JavaScript offers two methods for converting string variables to numeric variables.</p>
 
@@ -324,7 +354,14 @@ document.getElementById("resultNum").innerHTML = "&lt;b&gt;"+resultdNum+"&lt;\/b
 <p>You can close the <b>exercise-5-3.html</b> file when finished.</p>
 
 
-<h3>Setting decimal places with the <span>toFixed()</span> method</h3>
+</section>
+
+
+<section id="toFixed" class="wrapper-content">
+
+
+
+<h2>Setting decimal places with the <span>toFixed()</span> method</h2>
 
 <p>When displaying financial amounts on screen it is conventional to format them so that they have a fixed number of decimal places. Values such as 12.80 and 45.00 look much better than 12.8 and 45. JavaScript provides a <span class="syn">toFixed()</span> method for this purpose. You enter the number of decimal places you require in the method's parenthesis. It works only with numeric variables.</p>
 
@@ -335,5 +372,55 @@ myNum = myNum.toFixed(2);
 </pre>
 
 
+</section>
+
+<section id="github-upload" class="wrapper-content bg-white">
+	<h2>Uploading your JavaScript exercise files to GitHub</h2>
+
+	<p>Follow these steps below to upload your <i>entire</i> <b>js-exercises</b> folder to your website on GitHub.</p>
+
+	<ol>
+
+		<li>Sign in to Github and click the name of the repository (&#8216;repo&#8217;) that holds your web pages.</li>
+
+		<li>On the next GitHub screen displayed, click the <b>Add file</b> button near the right of the screen and then choose <b>Upload files</b> from the dropdown list. 
+		<img src="assets/img/variables-operators/github-btn-add-file-dropdown.png" alt="github-upload-portfolio"></li>
+
+		<li>In File/Windows Explorer, select your <b>js-exercises</b> folder, and drag-and-drop it to your repository on GitHub. 
+		
+		<img src="assets/img/variables-operators/github-upload-drag-drop.png" alt="Introduction to Images"></li>
+
+		<li>Scroll down to the bottom of the GitHub screen, and accept or edit the short message (<span style="color:gray">Add files via upload</span>) in the <b>Commit changes</b> box.
+
+		<span class="inside-ol">&nbsp;</span>
+
+		Finally, click the green <b>Commit changes</b> button to upload your entire <b><b>js-exercises</b></b> folder and all the files it contains.</li>
+
+	</ol>
+
+	<p>Your uploaded files are published on GitHub at a web address similar to the following, where <b>username</b> is the username you have chosen for your GitHub account:</p>
+
+	<p><b>https://username.github.io/js-exercises/js-exercises-5/user-input/exercise-5-1.html<br>
+	https://username.github.io/js-exercises/js-exercises-5/user-input/exercise-5-2.html<br>
+	https://username.github.io/js-exercises/js-exercises-5/user-input/exercise-5-3.html</b></p>
+
+	<p>It may take a few minutes for your uploaded files to appear on GitHub.</p>
+
+
+
+		<p><br>Return to <a href="../index.html">Contents</a>.</p>
+
 
 </section>
+
+
+
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+
+
+ </BODY>
+</HTML>
