--- a/it4women/js-new/5-user-input.html
+++ b/it4women/js-new/5-user-input.html
@@ -48,7 +48,7 @@
 
 	<h3>Exercise Files</h3>
 
-	<p>In this Tutorial you will work with the following web page:</p>
+	<p>In this Tutorial you will work with the following web pages:</p>
 
 	<ul>
 		<li><a href="assets/exercises/user-input/exercise-5-1.html" target="_blank">exercise-5-1.html</a></li>
