--- a/it4women/js-new/1-first-scripts.html
+++ b/it4women/js-new/1-first-scripts.html
@@ -54,7 +54,7 @@
 	</ul>
 
 	<h3>Exercise Files</h3>
-	<p>In this Tutorial you will work with the following HTML files.</p>
+	<p>In this Tutorial you will work with the following web pages.</p>
 
 	<ul>
 		<li><a href="assets/exercises/introduction/exercise-1-1.html" target="_blank">exercise-1-1.html</a></li>
