--- a/it4women/js-new/4-functions-intro.html
+++ b/it4women/js-new/4-functions-intro.html
@@ -52,7 +52,7 @@
 
 	<h3>Exercise Files</h3>
 
-	<p>In this Tutorial you will work with the following exercises file:</p>
+	<p>In this Tutorial you will work with the following web page:</p>
 	<ul>
 		<li><a href="assets/exercises/intro-functions/exercise-4-1.html" target="_blank">exercise-4-1.html</a></li>
 	</ul>
