--- a/it4women/js-new/2-objects-properties-methods.html
+++ b/it4women/js-new/2-objects-properties-methods.html
@@ -50,7 +50,7 @@
 	</ul>
 
 	<h3>Exercise Files</h3>
-	<p>In this Tutorial you will work with the following web page:</p>
+	<p>In this Tutorial you will work with the following web pages:</p>
 
 	<ul>
 		<li><a href="assets/exercises/objects-properties-methods/exercise-2-1.html" target="_blank">exercise-2-1.html</a></li>
