--- a/it4women/index.html
+++ b/it4women/index.html
@@ -441,6 +441,42 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 </section>
 
+<div class="bg-section-light" style="padding-bottom: 20px; margin-bottom:20px">
+<section class="container-wide">
+
+	<h2>Working with Wordpress</h2>
+
+	<div class="flex-grid">
+
+		<div class="item-3">
+			<p><a href="wordpress/wp-intro.html" style="font-size:18px"><b>1: Introduction</b></a></p>
+		</div>
+
+		<div class="item-3">
+			<p><a href="wordpress/wp-publish.html" style="font-size:18px"><b>2: Publishing</b></a></p>
+		</div>
+
+
+		<div class="item-3">
+			<p><a href="wordpress/wp-themes.html" style="font-size:18px"><b>3: Themes</b></a></p>
+		</div>
+	</div>
+
+	<div class="flex-grid">
+
+		<div class="item-3">
+			<p><a href="wordpress/wp-plugins.html" style="font-size:18px"><b>4: Plugins</b></a></p>
+		</div>
+
+		<div class="item-3"><p>&nbsp;</p></div>
+
+	</div><!--- /flex-grid -->
+
+</section>
+</div>
+
+
+
 
 <!--
 <section class="container-wide">
@@ -569,6 +605,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <p>&nbsp;</p>
 
 
+</section>
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
