--- a/it4women/projects/project-home/index-3.html
+++ b/it4women/projects/project-home/index-3.html
@@ -60,7 +60,7 @@
 
 <div class="jumbotron tutorial">
 	<h3><a href="../../index.html" title="All HTML projects">Contents&nbsp;&nbsp;></a></h3>
-	<h1>Updating your Website Styles</h1>
+	<h1>Updating your Website Colours</h1>
 </div>
 
 <section id="learning-goals" class="wrapper-content">
