--- a/it4women/index.html
+++ b/it4women/index.html
@@ -589,7 +589,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<p><a href="projects/project-home/index-1.html"><b>Downloading Your Website Template</a></b></p>
 	<p><a href="projects/project-home/index-2.html"><b>Updating your Website Content</a></b></p>
-	<p><a href="projects/project-home/index-3.html"><b>Updating your Website Styles</a></b></p>
+	<p><a href="projects/project-home/index-3.html"><b>Updating your Website Colours</a></b></p>
 </section>
 
 
@@ -643,5 +643,4 @@ setTimeout(ldinsp, 0);
 <!-- End Inspectlet Asynchronous Code -->
 </body>
 </html>
-
 
